[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "publishthing"
dynamic = ["version"]
description = "mike's homegrown static publishing thing"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Mike Bayer", email = "mike@zzzcomputing.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "requests",
    "unidiff",
    "webob",
]

[project.scripts]
publish_gh_relnotes = "publishthing.apps.publish_gh_relnotes:main"
publishthing = "publishthing.apps.generate_site:main"
sync_github_issues = "publishthing.apps.sync_gh_issues:main"

[project.urls]
Homepage = "http://github.com/sqlalchemyorg/publishthing"

[tool.hatch.version]
path = "publishthing/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/publishthing",
]

[tool.black]
line-length = 79
target-version = ['py39']


[tool.zimports]
black-line-length = 79

